@@ -1,3 +1,7 @@
+2003-07-16	ujwal
+
+    * Added support for ANSI 16 color sequences.
+
 2003-07-09	ujwal
 
     * Made a change in PTYSession: insertText to always use dataUsingEncoding.
